<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:title="@string/profile"
                android:icon="@drawable/ic_profile"/>
            <item
                android:id="@+id/nav_login"
                android:title="@string/login"
                android:icon="@drawable/ic_login"/>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/ic_share"/>
            <item
                android:id="@+id/nav_rate"
                android:title="@string/rate"
                android:icon="@drawable/ic_rate"/>
        </menu>
    </item>

</menu>