<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".registrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_firstname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/firstname"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_secondname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintStart_toStartOf="@id/registration_firstname"
                app:layout_constraintTop_toBottomOf="@id/registration_firstname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_secondname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lastname"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintStart_toStartOf="@id/registration_secondname"
                app:layout_constraintTop_toBottomOf="@id/registration_secondname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintStart_toStartOf="@id/registration_email"
                app:layout_constraintTop_toBottomOf="@id/registration_email"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registration_registration_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/registrate"
                app:layout_constraintStart_toStartOf="@id/registration_password"
                app:layout_constraintTop_toBottomOf="@id/registration_password" />

            <TextView
                android:id="@+id/registration_existingaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_got_account" />

        </LinearLayout>
    </ScrollView>
</layout>