<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".addCarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/add_car_main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_car"
                app:tint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/car_icon_description" />

            <TextView
                android:id="@+id/add_car_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                android:text="@string/main"
                app:layout_constraintBottom_toBottomOf="@+id/add_car_main_icon"
                app:layout_constraintStart_toEndOf="@+id/add_car_main_icon"
                app:layout_constraintTop_toTopOf="@+id/add_car_main_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_make"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_car_main_icon"
                app:layout_constraintTop_toBottomOf="@+id/add_car_main_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_make_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/brand"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/add_car_make"
                app:layout_constraintStart_toStartOf="@+id/add_car_make"
                app:layout_constraintTop_toBottomOf="@+id/add_car_make">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_model_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/model"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_licens_plate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/add_car_model"
                app:layout_constraintStart_toStartOf="@+id/add_car_model"
                app:layout_constraintTop_toBottomOf="@+id/add_car_model">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_license_plate_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/license_plate"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_km"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/add_car_licens_plate"
                app:layout_constraintStart_toStartOf="@+id/add_car_licens_plate"
                app:layout_constraintTop_toBottomOf="@+id/add_car_licens_plate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_km_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/km"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/type"
                android:paddingStart="11dp"
                app:layout_constraintEnd_toEndOf="@+id/add_car_km"
                app:layout_constraintStart_toStartOf="@+id/add_car_km"
                app:layout_constraintTop_toBottomOf="@+id/add_car_km">

                <AutoCompleteTextView
                    android:id="@+id/add_car_type_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_fuel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/fuel_type"
                android:paddingStart="11dp"
                app:layout_constraintEnd_toEndOf="@+id/add_car_type"
                app:layout_constraintStart_toStartOf="@+id/add_car_type"
                app:layout_constraintTop_toBottomOf="@+id/add_car_type">

                <AutoCompleteTextView
                    android:id="@+id/add_car_fuel_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_years_owned"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/years_owned"
                android:paddingStart="11dp"
                app:layout_constraintEnd_toEndOf="@+id/add_car_fuel"
                app:layout_constraintStart_toStartOf="@+id/add_car_fuel"
                app:layout_constraintTop_toBottomOf="@+id/add_car_fuel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_years_owned_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/add_car_location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="11dp"
                app:tint="@color/colorPrimary"
                android:src="@drawable/ic_map"
                app:layout_constraintStart_toStartOf="@+id/add_car_main_icon"
                app:layout_constraintTop_toBottomOf="@+id/add_car_years_owned" />

            <TextView
                android:id="@+id/add_car_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="@+id/add_car_location_icon"
                app:layout_constraintStart_toEndOf="@+id/add_car_location_icon"
                app:layout_constraintTop_toTopOf="@+id/add_car_location_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                android:paddingStart="11dp"
                app:layout_constraintEnd_toStartOf="@+id/add_car_street_number"
                app:layout_constraintStart_toEndOf="@+id/add_car_location_icon"
                app:layout_constraintTop_toBottomOf="@+id/add_car_location_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_street_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_street_number"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/add_car_street"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/add_car_street_number_addition"
                app:layout_constraintStart_toEndOf="@+id/add_car_street"
                app:layout_constraintTop_toTopOf="@+id/add_car_street">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_street_number_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/street_number"
                    android:inputType="number"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_street_number_addition"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/add_car_street_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_car_street_number"
                app:layout_constraintTop_toTopOf="@+id/add_car_street_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_street_number_addition_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/street_number_addition"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_zipcode"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/add_car_city"
                app:layout_constraintStart_toStartOf="@+id/add_car_street"
                app:layout_constraintTop_toBottomOf="@+id/add_car_street">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_zipcode_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/zipcode"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_car_zipcode"
                app:layout_constraintTop_toBottomOf="@+id/add_car_street">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_city_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/add_car_price_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="11dp"
                app:tint="@color/colorPrimary"
                android:src="@drawable/ic_cash"
                app:layout_constraintStart_toStartOf="@+id/add_car_location_icon"
                app:layout_constraintTop_toBottomOf="@+id/add_car_zipcode" />

            <TextView
                android:id="@+id/add_car_price_per_day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                android:text="@string/financial"
                app:layout_constraintBottom_toBottomOf="@+id/add_car_price_icon"
                app:layout_constraintStart_toEndOf="@+id/add_car_price_icon"
                app:layout_constraintTop_toTopOf="@+id/add_car_price_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_car_price_icon"
                app:layout_constraintTop_toBottomOf="@+id/add_car_price_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_value_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/purchase_price"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_car_price_per_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="11dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/add_car_value"
                app:layout_constraintStart_toStartOf="@+id/add_car_value"
                app:layout_constraintTop_toBottomOf="@+id/add_car_value">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_car_price_per_hour__autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/price_per_hour"
                    android:inputType="numberDecimal"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_car_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/add_car"
                app:layout_constraintEnd_toEndOf="@+id/add_car_price_per_hour"
                app:layout_constraintStart_toStartOf="@+id/add_car_price_icon"
                app:layout_constraintTop_toBottomOf="@+id/add_car_price_per_hour" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>