<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/car1" />

        <TextView
            android:id="@+id/brand_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="@+id/image_slider"
            app:layout_constraintTop_toBottomOf="@+id/image_slider"
            tools:text="@string/brand" />

        <TextView
            android:id="@+id/price_per_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/euroSign"
            app:layout_constraintBottom_toBottomOf="@+id/price_per_day_text"
            app:layout_constraintEnd_toStartOf="@+id/price_per_day_text"
            app:layout_constraintTop_toTopOf="@+id/price_per_day_text" />

        <TextView
            android:id="@+id/price_per_day_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_slider"
            tools:text="@string/price_per_day" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/euroSign"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/total_price_text"
            app:layout_constraintEnd_toStartOf="@+id/total_price_text"
            app:layout_constraintTop_toBottomOf="@+id/price_per_day_text" />

        <TextView
            android:id="@+id/total_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_per_day_text"
            tools:text="@string/total_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>